# connection_me

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: barrier-gap-analysis.md  build-artifacts.md  design.md  environment.md  github-ci.md  implementation.md  roadmap.md
packaging/: mybarrier.desktop
packaging/appimage/: AppImageBuilder_x86_64.yml
scripts/: build.ps1  build.sh  package-appimage.sh  package-current.ps1  package-current.sh
src/: barrier_config.cpp  barrier_config.h  cli.cpp  cli.h  config.cpp  config.h  daemon.cpp  daemon.h  main.cpp  net.cpp  net.h  platform.cpp  platform.h  protocol.cpp  protocol.h  util.cpp  util.h
src/gui/: MainWindow.cpp  MainWindow.h  main.cpp
tests/: barrier_config_smoke.sh  discovery_smoke.sh  smoke.sh
